# vio_police_academy

./: .env  Cargo.toml  api.yaml
src/: app.rs  auth.rs  db.rs  error.rs  lib.rs  main.rs
src/entity/: academies.rs  academy_article_categories.rs  academy_articles.rs  academy_behaviors.rs  academy_cadets.rs  academy_cadets_archive.rs  academy_events.rs  academy_exam_appointment_matches.rs  academy_exam_appointments.rs  academy_exam_content.rs  academy_exam_question_pool_question_answers.rs  academy_exam_question_pool_questions.rs  academy_exam_question_pools.rs  academy_exam_results.rs  academy_exams.rs  academy_practice_options.rs  academy_practice_results.rs  academy_practices.rs  academy_teams.rs  academy_template_exams_relation.rs  academy_template_practices_relation.rs  academy_templates.rs  academy_videos.rs  mod.rs  prelude.rs
vio_academy_web/: Cargo.toml
vio_academy_web/src/: app.rs  auth.rs  config.rs  db.rs  lib.rs  main.rs  templates.rs
vio_academy_web/templates/: index.html
vio_v_client/: Cargo.toml  README.md
vio_v_client/.openapi-generator/: FILES
vio_v_client/docs/: DefaultApi.md  SelfGet200Response.md
vio_v_client/src/apis/: configuration.rs  default_api.rs
vio_v_client/src/models/: _self_get_200_response.rs  mod.rs
