[package]
name = "vio_police_academy"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
askama = "0.14.0"
axum = "0.8.4"
axum-extra = { version = "0.10.1", features = ["cookie"] }
axum-htmx = "0.7.0"
axum-login = "0.17.0"
axum-messages = "0.8.0"
dotenvy = "0.15.7"
oauth2 = { version = "5.0.0", features = ["pkce-plain", "reqwest"] }
reqwest = "0.12.15"
sea-orm = { version = "1.1.11", features = ["sqlx-mysql", "runtime-tokio-rustls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["full"] }
tower-sessions = "0.14.0"
tower-sessions-sqlx-store = "0.15.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
